# cfg-rw

./: CHANGELOG.md  README.md  piemaker.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-workflow.yaml
cfgrw/: __init__.py
cfgrw/formats/: __init__.py  envvar.py  ini.py  json.py  xml.py  yaml.py
complexity/radon/: index.html  report.txt
complexity/wily/: index.html
coverage/coverage/: class_index.html  function_index.html  index.html  status.json  z_02b28c1638cf40d5___init___py.html  z_02b28c1638cf40d5_envvar_py.html  z_02b28c1638cf40d5_ini_py.html  z_02b28c1638cf40d5_json_py.html  z_02b28c1638cf40d5_xml_py.html  z_02b28c1638cf40d5_yaml_py.html  z_c5015b02dde56c0e___init___py.html
doc/sphinx/: cfgrw.formats.html  cfgrw.html  conf.py  genindex.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
doc/sphinx/_build/doctrees/: cfgrw.doctree  cfgrw.formats.doctree  environment.pickle  index.doctree
doc/sphinx/_modules/: index.html
doc/sphinx/_sources/: cfgrw.rst.txt  index.rst.txt
examples/: _cfgrw.py  cfgrw-lib.sh  cfgrw.py  cfgrw.sh  cfgrw.xml  cfgrw.yaml
lint/pylint/: index.html  report.json
test-integration/pytest/: index.html
test/pytest/: index.html
tests/: test_cfgrw.py
tests-integration/: test_envvar_conf.py  test_ini_conf.py  test_json_conf.py  test_json_j2_conf.py  test_xml_conf.py  test_yaml_conf.py
tests-integration/fixtures/: cfgrw-empty.ini  cfgrw-empty.xml  cfgrw.ini  cfgrw.json  cfgrw.json.j2
tests/formats/: __init__.py  test_envvar.py  test_ini.py  test_json.py  test_xml.py  test_yaml.py
(+16 files in other folders)
